# WinNative

./: .gitattributes  .gitignore  PeChecker.java  README.md  exp_contents.txt  settings.gradle  steam_contents.txt
.github/workflows/: pr-ci.yml  pr-release-publish.yml  tag-apk-artifacts.yml
android_sysvshm/: android_sysvshm.c  build.sh  steam_glxshim.c
app/: build.gradle  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/app/: PluviaApp.kt
app/src/main/app/db/: PluviaDatabase.kt
app/src/main/app/service/: DownloadService.kt
app/src/main/app/shell/: LibraryGameLaunchScreen.kt  StoreGameDetailScreen.kt  UnifiedActivity.kt  WorkshopScreen.kt
app/src/main/app/update/: UpdateChecker.kt
app/src/main/assets/: imagefs.tzst
app/src/main/assets/ddrawrapper/: dd7to9.tzst
app/src/main/assets/graphics_driver/: wrapper.tzst
app/src/main/assets/gtk2-arm64/: libgdk-x11-2.0.so.0.2400.33
app/src/main/assets/wnsteam/: lsteamclient-x86_64.tzst
app/src/main/assets/xvfb-arm64/: Xvfb  winnative-driverquery-noop  winnative-steamwebhelper-wrapper  xkbcomp
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/proot/: CMakeLists.txt
app/src/main/cpp/steam-driverquery-noop/: steam_driverquery_noop.c
app/src/main/cpp/steamwebhelper-preload/: steamwebhelper_preload.c
app/src/main/cpp/steamwebhelper-wrapper/: build.sh  steamwebhelper_wrapper.c
app/src/main/cpp/winlator/: fakeinput.cpp  gpu_image.c  native_content_io.cpp  surface_compositor.c  sync_fence.c  vulkan.c  vulkan.cpp  winnative_execmemfix.c
app/src/main/cpp/winlator/vk/: bin2c.cmake  vk_dispatch.c  vk_dispatch.h  vk_driver.h  vk_image.c  vk_renderer.c  vk_state.h
app/src/main/cpp/winlator/vk/shaders/: blit.frag  cursor.frag  effect_crt.frag  effect_fsr.frag  effect_hdr.frag  effect_natural.frag  effect_vivid.frag  quad.vert  sgsr1.frag  window.frag  window.vert
app/src/main/cpp/wn-steam-bootstrap/: CMakeLists.txt
app/src/main/cpp/wn-steam-bootstrap/include/: steam_iface.h
app/src/main/cpp/wn-steam-bootstrap/src/: steam_bootstrap.cpp
app/src/main/cpp/wn-steam-client/: CMakeLists.txt
app/src/main/cpp/wn-steam-client/cmake/: FindOpenSSL.cmake
app/src/main/cpp/wn-steam-client/include/wn_steam/: auth_session.h  authenticator.h  base64.h  cdn_client.h  cm_client.h  cm_server.h  cm_server_list.h  cmsg_protobuf_header.h  content_manifest.h  crypto.h  depot_chunk.h  depot_config.h  depot_downloader.h  depot_writer.h  emsg.h  encrypted_channel.h  euniverse.h  handshake_messages.h  heartbeat.h  job_manager.h  key_dictionary.h  proto_envelope.h  proto_wire.h  rsa_password.h  steam_directory.h  transport.h  vdf.h  version.h  wine_bridge.h  wire_format.h  wn_library_store.h  wn_ticket_cache.h  ws_connection.h
app/src/main/cpp/wn-steam-client/include/wn_steam/pb/: cauthentication.h  ccloud.h  ccontentserverdirectory.h  cfamilygroups.h  cinventory.h  cmsg_client_change_status.h  cmsg_client_games_played.h  cmsg_client_get_app_ownership_ticket.h  cmsg_client_get_depot_decryption_key.h  cmsg_client_get_user_stats.h  cmsg_client_kick_playing_session.h  cmsg_client_license_list.h  cmsg_client_persona.h  cmsg_client_pics.h  cmsg_client_playing_session_state.h  cmsg_client_request_encrypted_app_ticket.h  cmsg_client_store_user_stats.h  cmsg_clientserver_login.h  cplayer.h  cpublishedfile.h
app/src/main/cpp/wn-steam-client/jni/: wn_session_jni.cpp  wn_steam_jni.cpp
app/src/main/cpp/wn-steam-client/src/: auth_session.cpp  base64.cpp  cdn_client.cpp  cm_client.cpp  cm_server.cpp  cm_server_list.cpp  cmsg_protobuf_header.cpp  content_manifest.cpp  crypto.cpp  depot_chunk.cpp  depot_config.cpp  depot_downloader.cpp  depot_writer.cpp  encrypted_channel.cpp  handshake_messages.cpp  heartbeat.cpp  job_manager.cpp  key_dictionary.cpp  proto_envelope.cpp  proto_wire.cpp  rsa_password.cpp  steam_directory.cpp  vdf.cpp  version.cpp  wine_bridge.cpp  wn_library_store.cpp  wn_ticket_cache.cpp  ws_connection.cpp
app/src/main/cpp/wn-steam-client/src/pb/: cauthentication.cpp  ccloud.cpp  ccontentserverdirectory.cpp  cfamilygroups.cpp  cinventory.cpp  cmsg_client_change_status.cpp  cmsg_client_games_played.cpp  cmsg_client_get_app_ownership_ticket.cpp  cmsg_client_get_depot_decryption_key.cpp  cmsg_client_get_user_stats.cpp  cmsg_client_kick_playing_session.cpp  cmsg_client_license_list.cpp  cmsg_client_persona.cpp  cmsg_client_pics.cpp  cmsg_client_playing_session_state.cpp  cmsg_client_request_encrypted_app_ticket.cpp  cmsg_client_store_user_stats.cpp  cmsg_clientserver_login.cpp  cplayer.cpp  cpublishedfile.cpp
app/src/main/cpp/xvfb-setxid-shim/: setxid_noop.c
app/src/main/cpp/xz/: native_xz_stream.c
app/src/main/cpp/xz/xz_embedded/: xz_config.h
app/src/main/feature/configs/: ConfigExportImport.kt  ConfigRepository.kt  ConfigSerializer.kt  GpuDetector.kt  SupabaseClient.kt  UploaderIdentity.kt
app/src/main/feature/leaderboard/: HardwareDictionary.kt  PerfDigest.kt  SessionRecordingController.kt  SessionStatsCollector.kt
app/src/main/feature/setup/: SetupWizardActivity.kt
app/src/main/feature/shortcuts/: ShortcutSettingsComposeDialog.kt  ShortcutsFragment.java
app/src/main/feature/steamcloudsync/: SteamAutoCloud.kt  SteamCloudHistoryProvider.kt  SteamCloudSyncHelper.kt  SteamExitCloudSync.kt  SteamLaunchCloudSync.kt  SteamSaveSnapshotManager.kt
app/src/main/feature/sync/: CloudSyncConflictDialog.kt  CloudSyncHelper.kt  EpicLaunchCloudSync.kt  GogLaunchCloudSync.kt
app/src/main/res/drawable/: input_controls_toolbar.xml
app/src/main/res/layout/: about_dialog.xml  activity_hub.xml  add_env_var_dialog.xml  adrenotools_asset_list_item.xml  adrenotools_fragment.xml  advanced_fragment.xml  binding_field.xml  box64_edit_preset_dialog.xml  container_add_card.xml  container_detail_fragment.xml  container_list_item.xml  container_storage_info_dialog.xml  containers_fragment.xml  content_dialog.xml  content_info_dialog.xml  content_transfer_dialog.xml  content_untrusted_dialog.xml  (+27 more)
gradle/: libs.versions.toml
tools/: gbe_fork.version  update-gbe-fork.sh
(+359 files in other folders)
